[tool.poetry]
name = "openseapy"
version = "0.1.0"
description = ""
authors = ["Dmitrij Vinokour <dimfred.1337@web.de>"]

[tool.poetry.dependencies]
python = ">=3.9, <=3.10"
pydantic = "^1.9.1"
loguru = "^0.6.0"
websockets = "9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
