[tool.poetry]
name = "openseapy"
version = "0.1.0"
description = ""
authors = ["Dmitrij Vinokour <dimfred.1337@web.de>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
httpx = ">=0.23.0"
pydantic = ">=2.5"
urlpath = ">=1.2.0"
loguru = ">=0.6.0"
websockets = ">=10.3"
aioredis-semaphore = {git = "https://github.com/Cojodi/aioredis-semaphore.git", rev = "main"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
pytest-cov = "^3.0.0"
aioconsole = "^0.5.1"

[tool.poetry.group.redis.dependencies]
redis = "^5.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
